--- a/sass/style.css
+++ b/sass/style.css
@@ -2,27 +2,47 @@ h1 {
   font-family: Helvetica, sans-serif;
 }
 
-.caja {
-  width: 500px;
-  margin: 0px auto;
-  text-align: center;
-  background: white;
-  padding: 10px;
-}
-.caja h1 {
-  color: red;
-}
-.caja p {
-  color: green;
-}
-.caja .info {
-  font-size: 10px;
+#layout {
+  display: flex;
+  flex-flow: row wrap;
+  border: 3px solid black;
+  padding: 5px;
+  /*Invocar variables*/
+  background: lightblue;
 }
 
 .caja {
-  border: 10px solid lightblue;
-  border-radius: 10px;
-  box-shadow: 10px black;
+  /*flex-grow: 1;*/
+  flex-basis: 25%;
+  flex-basis: calc((100% / 3) - 68px);
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  color: #FFFFFF;
+  padding: 20px;
+  border: 4px solid #222222;
+  margin: 10px;
+}
+
+.red {
+  order: 4;
+  background: #F44336;
+}
+
+.green {
+  order: 3;
+  background: #4CAF50;
+}
+
+.blue {
+  order: 2;
+  background: #448AFF;
+}
+
+.orange {
+  flex-basis: 100%;
+  order: 1;
+  background: #FF5722;
 }
 
 .listado {
@@ -31,9 +51,20 @@ h1 {
   box-shadow: 10px black;
 }
 
+.listado ul {
+  list-style: none;
+}
+.listado ul li {
+  margin: 10px;
+}
+.listado ul li a {
+  text-decoration: none;
+  color: #757575;
+}
+
 .alerta-exito, .alerta-peligro, .alerta {
   border: 1px solid grey;
-  background: #ccc;
+  background: lightblue;
   color: grey;
   padding: 10px;
   width: 80%;
@@ -42,13 +73,13 @@ h1 {
 }
 
 .alerta-peligro {
-  color: red;
-  border-color: red;
+  color: #F44336;
+  border-color: #F44336;
 }
 
 .alerta-exito {
-  color: green;
-  border-color: green;
+  color: #4CAF50;
+  border-color: #4CAF50;
 }
 
 h1 {
